Remove Users IMG and Change Color in Testimonials

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ https://ignacioprados.vercel.app/
                         <ul class="nav">
                             <li class="scroll-to-section"><a href="#welcome" class="menu-item">Inicio</a></li>
                             <li class="scroll-to-section"><a href="#about" class="menu-item">Descargar</a></li>
-                            <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Testimonios</a>
+                            <li class="scroll-to-section"><a href="#testimonials" class="menu-item">Usuarios</a>
                             </li>
                             <li class="submenu">
                                 <a style="cursor: pointer;" href="javascript:;">Nosotros</a>
@@ -233,9 +233,9 @@ https://ignacioprados.vercel.app/
                     data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                     <div class="owl-carousel owl-theme">
                         <div class="item service-item">
-                            <div class="author">
+                            <!--<div class="author">
                                 <i><img src="assets/images/testimonial-author-1.png" alt="Author One"></i>
-                            </div>
+                            </div>-->
                             <div class="testimonial-content">
                                 <ul class="stars">
                                     <li><i class="fa fa-star" style="color: var(--quaternary-color);"></i></li>
@@ -251,9 +251,9 @@ https://ignacioprados.vercel.app/
                             </div>
                         </div>
                         <div class="item service-item">
-                            <div class="author">
+                            <!--<div class="author">
                                 <i><img src="assets/images/testimonial-author-1.png" alt="Second Author"></i>
-                            </div>
+                            </div>-->
                             <div class="testimonial-content">
                                 <ul class="stars">
                                     <li><i class="fa fa-star" style="color: var(--quaternary-color);"></i></li>
@@ -269,9 +269,9 @@ https://ignacioprados.vercel.app/
                             </div>
                         </div>
                         <div class="item service-item">
-                            <div class="author">
+                            <!--<div class="author">
                                 <i><img src="assets/images/testimonial-author-1.png" alt="Author Third"></i>
-                            </div>
+                            </div>-->
                             <div class="testimonial-content">
                                 <ul class="stars">
                                     <li><i class="fa fa-star" style="color: var(--quaternary-color);"></i></li>
@@ -287,9 +287,9 @@ https://ignacioprados.vercel.app/
                             </div>
                         </div>
                         <div class="item service-item">
-                            <div class="author">
+                            <!--<div class="author">
                                 <i><img src="assets/images/testimonial-author-1.png" alt="Fourth Author"></i>
-                            </div>
+                            </div>-->
                             <div class="testimonial-content">
                                 <ul class="stars">
                                     <li><i class="fa fa-star" style="color: var(--quaternary-color);"></i></li>
