Add Back to Top Button

--- a/index.html
+++ b/index.html
@@ -74,6 +74,8 @@ https://ignacioprados.vercel.app/
     </div>
     <!-- ***** Preloader End ***** -->
 
+    <!-- Back to top Button -->
+    <button id="back-to-top-btn" class="curserhover btnEntrance" style="display: block;"><i class="fas fa-angle-double-up"></i></button>
 
     <!-- ***** Header Area Start ***** -->
     <header class="header-area header-sticky">
