--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@ https://ignacioprados.vercel.app/
     <div class="container" id="scrolltext" data-scroll-reveal="enter bottom move 30px over 0.6s after 0.6s">
         <div class="containertext" speed=70>
             <div class='scrolling-text'>
-            <h2 class="scrolling-text-content">belo • belo • belo • belo • belo • belo • belo • belo • belo • belo • belo • belo • belo • </h2>
+            <h2 class="scrolling-text-content">belo • belo • belo • belo • belo • belo • belo • belo • belo • belo • belo • belo • </h2>
             </div>
         </div>
     </div>
