--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ https://ignacioprados.vercel.app/
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <a href="index.html" class="logo">
+                        <a href="#" class="logo">
                             <img src="assets/images/belo.svg" alt="" class="belologo">
                         </a>
                         <!-- ***** Logo End ***** -->
