Update Users testimonials

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@ https://ignacioprados.vercel.app/
                 <div class="col-lg-8 offset-lg-2">
                     <div class="center-heading" data-scroll-reveal="enter top move 30px over 0.6s after 0.4s">
                         <h2>Que piensan de <em>Nosotros</em></h2>
-                        <p>Sus opiniones nos permiten mejorar nuestro producto.</p>
+                        <p>Sus opiniones nos permiten mejorar la plataforma y la comunidad.</p>
                     </div>
                 </div>
                 <div class="col-lg-10 col-md-12 col-sm-12 mobile-bottom-fix-big"
@@ -246,9 +246,8 @@ https://ignacioprados.vercel.app/
                                     <li><i class="fa fa-star" style="color: var(--quaternary-color);"></i></li>
                                     <li><i class="fa fa-star"></i></li>
                                 </ul>
-                                <h4>Jonathan Smart</h4>
-                                <p>“Nullam hendrerit, elit a semper pharetra, ipsum nibh tristique tortor, in tempus
-                                    urna elit in mauris.”</p>
+                                <h4>Ariel Merchanson</h4>
+                                <p>“ Opero con cryptos desde el celu. Muy simple e intuitiva. ”</p>
                                 <span>Besta CTO</span>
                             </div>
                         </div>
@@ -264,9 +263,8 @@ https://ignacioprados.vercel.app/
                                     <li><i class="fa fa-star" style="color: var(--quaternary-color);"></i></li>
                                     <li><i class="fa fa-star" style="color: var(--quaternary-color);"></i></li>
                                 </ul>
-                                <h4>Martino Tino</h4>
-                                <p>“Morbi non mi luctus felis molestie scelerisque. In ac libero viverra, placerat est
-                                    interdum, rhoncus leo.”</p>
+                                <h4>Tomás Selemón</h4>
+                                <p>“ Hace que comprar y enviar cripto sea realmente sencillo. ”</p>
                                 <span>Web Analyst</span>
                             </div>
                         </div>
@@ -282,9 +280,8 @@ https://ignacioprados.vercel.app/
                                     <li><i class="fa fa-star" style="color: var(--quaternary-color);"></i></li>
                                     <li><i class="fa fa-star"></i></li>
                                 </ul>
-                                <h4>George Tasa</h4>
-                                <p>“Fusce rutrum in dolor sit amet lobortis. Ut at vehicula justo. Donec quam dolor,
-                                    congue a fringilla sed, maximus et urna.”</p>
+                                <h4>Manuel Benardino</h4>
+                                <p>“ La forma más simple e intuitiva para comprar criptomonedas con pesos. ”</p>
                                 <span>System Admin</span>
                             </div>
                         </div>
@@ -297,13 +294,12 @@ https://ignacioprados.vercel.app/
                                     <li><i class="fa fa-star" style="color: var(--quaternary-color);"></i></li>
                                     <li><i class="fa fa-star" style="color: var(--quaternary-color);"></i></li>
                                     <li><i class="fa fa-star" style="color: var(--quaternary-color);"></i></li>
-                                    <li><i class="fa fa-star"></i></li>
+                                    <li><i class="fa fa-star" style="color: var(--quaternary-color);"></i></li>
                                     <li><i class="fa fa-star"></i></li>
                                 </ul>
-                                <h4>Sir James</h4>
-                                <p>"Fusce rutrum in dolor sit amet lobortis. Ut at vehicula justo. Donec quam dolor,
-                                    congue a fringilla sed, maximus et urna."</p>
-                                <span>New Villager</span>
+                                <h4>Ignacio Prados</h4>
+                                <p>" Simplemente excelente, transacciones rápidas y transparentes. "</p>
+                                <span>Web Developer</span>
                             </div>
                         </div>
                     </div>
