Fix main button spelling

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ https://ignacioprados.vercel.app/
                         data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                           <h1 id="greeting"></h1>
                         <p>Llegó belo, para que puedas pagar en pesos y comprar criptomonedas de forma estúpidamente simple mientras disfrutas los mejores beneficios.</p> 
-                        <a href="#about" class="main-button-slider">Conocenos Mejor</a>
+                        <a href="#about" class="main-button-slider">Conócenos Mejor</a>
                     </div>
                 </div>
             </div>
